Version 0.5-2 (2011-11-25)
o Added Acetylene data
o Added vcov.ridge() method

Version 0.5-1 (2011-08-22)
o Fixed Authors@R in DESCRIPTION

Version 0.5-0 (2011-08-22)

o Added NAMESPACE
o Initial package version, released to R-Forge
o Added pca.ridge