@@ -1,7 +1,12 @@
-export(ridge, coef.ridge, print.ridge, plot.ridge, pairs.ridge, traceplot, trans.colors, pca.ridge)
+export(ridge, coef.ridge, print.ridge, plot.ridge, pairs.ridge, traceplot, trans.colors, pca.ridge,
+	vcov.ridge, precision, precision.ridge, precision.lm
+)
 
 S3method(coef, ridge)
 S3method(print, ridge)
 S3method(plot, ridge)
 S3method(pairs, ridge)
+S3method(vcov, ridge)
+S3method(precision, ridge)
+S3method(precision, lm)
 
